--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ config.py
 # Adding additional files
 API_practice.ipynb
 random_numbers.ipynb
+Google_Nearby_Search.ipynb
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
